add desing for about section

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,11 @@ html,
 body {
   margin: 0;
 }
+
+.clearfix:after {
+  content: " "; /* Older browser do not support empty content */
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both;
+}
