--- a/css/styles.css
+++ b/css/styles.css
@@ -29,3 +29,19 @@ body {
   margin: 0 auto;
   max-width: 1200px;
 }
+
+.ir-arriba {
+  display: none;
+  background: #1de9b6;
+  color: #fff;
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  right: 15px;
+  z-index: 10000;
+}
+
+.ir-arriba .fa {
+  padding: 20px;
+  font-size: 18px;
+}
