--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 .form__contact {
-  background-color: #fff;
+  background-color: #25303b;
   padding: 25px;
 }
 
@@ -16,17 +16,26 @@
 
 .form__contact > .form-col > .form-col__left > .form-row > input[type="text"],
 input[type="email"] {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  width: 100%;
+  background-color: transparent;
+  color: #fff;
+  padding: 12px;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+  resize: vertical;
+  border: 2px solid rgba(0, 150, 136, 0.9);
+  border-top-style: solid;
+  border-right-style: solid;
+  border-left-style: solid;
+  border-top-style: none;
+  border-right-style: none;
+  border-left-style: none;
+  box-shadow: 0em 0em 0em 0em transparent inset;
+  border-radius: 0;
 }
 
 .form__contact > .form-col > .form-col__right > .form-row > textarea {
-  height: 100%;
+  height: 248px;
   width: 100%;
   padding: 12px; /* Some padding */
   border: 1px solid #ccc; /* Gray border */
