--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,23 @@
   src: url("../fonts/Jaapokkisubtract-Regular.otf");
   font-family: Subtract-Regular;
 }
+@font-face {
+  src: url("../fonts/Montserrat-Medium.otf");
+  font-family: Montserrat;
+}
+@font-face {
+  src: url("../fonts/Montserrat-Light.otf");
+  font-family: Montserrat-Light;
+}
+@font-face {
+  src: url("../fonts/Montserrat-Bold.otf");
+  font-family: Montserrat-Bold;
+}
 
 html,
 body {
   margin: 0;
+  font-family: Montserrat-Light;
 }
 
 .ir-arriba .fa {
@@ -149,11 +162,15 @@ body {
 
 .section-container .section__title {
   border-bottom: 2px solid #25303b;
+  padding-left: 15px;
+  font-family: Jaapokki-Regular;
 }
 
 .section-container .light-section__title {
   border-bottom: 2px solid #fff;
   color: #f7f7f7;
+  padding-left: 15px;
+  font-family: Jaapokki-Regular;
 }
 
 .dark-theme__section {
@@ -369,7 +386,7 @@ body {
   border-radius: 100%;
   font-size: 12px;
   font-weight: 900;
-  font-family: Subtract-Regular;
+  font-family: Enchance-Regular;
   text-transform: uppercase;
   background-color: #25303b;
   color: rgba(255, 255, 255, 0.5);
@@ -398,6 +415,7 @@ body {
   text-transform: uppercase;
   letter-spacing: -1px;
   position: relative;
+  font-family: Jaapokki-Regular;
 }
 
 .works__timeline > .works__timeline-item > .item-content > h2:after {
@@ -410,6 +428,12 @@ body {
   -webkit-transform: rotate(-45deg);
 }
 
+.works__timeline > .works__timeline-item > .item-content > h4 {
+  background: #fff;
+  margin: 0;
+  padding: 15px 0 0 15px;
+  font-family: Montserrat;
+}
 .works__timeline > .works__timeline-item > .item-content > p {
   padding: 15px;
   margin: 0;
@@ -451,15 +475,12 @@ body {
   background: #2ecc71;
 }
 
-.works__timeline
-  > .works__timeline-item:nth-child(2n + 3)
-  > .item-content
-  > h2 {
+.works__timeline > .works__timeline-item:nth-child(3n) > .item-content > h2 {
   background: #e67e22;
 }
 
 .works__timeline
-  > .works__timeline-item:nth-child(2n + 3)
+  > .works__timeline-item:nth-child(3n)
   > .item-content
   > h2:after {
   background: #e67e22;
@@ -480,6 +501,7 @@ body {
   width: 100%;
   background-color: #ddd;
   margin: 20px 0;
+  max-width: 570px;
 }
 
 .skills > .skills-col .skills__bar {
@@ -487,6 +509,7 @@ body {
   padding-left: 20px;
   line-height: 40px;
   color: white;
+  font-family: Montserrat;
 }
 
 .skills > .skills-col .skills__item > .html {
@@ -495,57 +518,57 @@ body {
 }
 
 .skills > .skills-col .skills__item > .php {
-  width: 80%;
+  width: 87%;
   background-color: #777bb4;
 }
 
 .skills > .skills-col .skills__item > .db {
-  width: 70%;
+  width: 78%;
   background-color: #a33639;
 }
 
 .skills > .skills-col .skills__item > .bootstrap {
-  width: 70%;
+  width: 78%;
   background-color: #614789;
 }
 
 .skills > .skills-col .skills__item > .scrum {
-  width: 70%;
+  width: 81%;
   background-color: #6db74d;
 }
 
 .skills > .skills-col .skills__item > .git {
-  width: 70%;
+  width: 85%;
   background-color: #f54d27;
 }
 
 .skills > .skills-col .skills__item > .devops {
-  width: 70%;
+  width: 55%;
   background-color: #0d2c40;
 }
 
 .skills > .skills-col .skills__item > .angular {
-  width: 70%;
+  width: 35%;
   background-color: #dd0031;
 }
 
 .skills > .skills-col .skills__item > .node {
-  width: 70%;
+  width: 45%;
   background-color: #83cd29;
 }
 
 .skills > .skills-col .skills__item > .react {
-  width: 70%;
+  width: 35%;
   background-color: #53c1de;
 }
 
 .skills > .skills-col .skills__item > .cms {
-  width: 70%;
+  width: 60%;
   background-color: #464646;
 }
 
 .skills > .skills-col .skills__item > .teamwork {
-  width: 70%;
+  width: 96%;
   background-color: #1cd4c6;
 }
 
@@ -555,7 +578,7 @@ body {
 }
 
 .skills > .skills-col .skills__item > .oop {
-  width: 70%;
+  width: 75%;
   background-color: #1f6385;
 }
 
