--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Coustard");
-@import url("https://fonts.googleapis.com/css?family=Coiny");
-
 @font-face {
   src: url("../fonts/Jaapokkienchance-Regular.otf");
   font-family: Enchance-Regular;
@@ -80,14 +77,14 @@ body {
   display: inline-block;
   font-size: 1rem;
   height: 50px;
+  margin: 15px 20px 0 20px;
 }
 
 .navbar > .navbar__container > .navbar__list > .navbar__item a {
   display: inline-block;
   text-decoration: none;
-  padding: 15px 20px;
   color: #1cd4c6;
-  transition: all 0.5s linear;
+  transition: all 0.2s linear;
   font-family: Enchance-Regular;
   text-transform: uppercase;
 }
@@ -106,7 +103,8 @@ body {
 }
 
 .navbar > .navbar__container > .navbar__list > .navbar__item a:hover {
-  height: 50px;
+  border-bottom: 5px solid #1cd4c6;
+  padding-bottom: 6px;
 }
 
 .header {
