--- a/css/contact.css
+++ b/css/contact.css
@@ -14,6 +14,10 @@
   width: 100%;
 }
 
+.form__contact > .form-col > .form-col__left > .form-row > label {
+  color: #fff;
+}
+
 .form__contact > .form-col > .form-col__left > .form-row > input[type="text"],
 input[type="email"] {
   width: 100%;
@@ -37,12 +41,16 @@ input[type="email"] {
 .form__contact > .form-col > .form-col__right > .form-row > textarea {
   height: 248px;
   width: 100%;
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  padding: 12px;
+  border: 2px solid rgba(0, 150, 136, 0.9);
+  background-color: transparent;
+  font-family: Montserrat-Light;
+  font-size: 12px;
+  border-radius: 0;
+  color: #fff;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
 .form__contact > .form-row__button {
